# glsl-to-spirv-macros

./: Cargo.toml  README.md
impl/: Cargo.toml
impl/src/: lib.rs
src/: lib.rs
